# bazel-lib

lib/private/: expand_template.bzl
lib/tests/tar/: BUILD.bazel
pkg/: tar.bzl
pkg/private/: BUILD.bazel  modify_mtree.awk  utils.bzl
pkg/tests/: BUILD.bazel  expected1.mtree  expected2.mtree
